docs/v8.4/packages_api/data/featuretoggles.md
+++
# -----------------------------------------------------------------------
# Do not edit this file. It is automatically generated by API Documenter.
# -----------------------------------------------------------------------
title = "FeatureToggles"
keywords = ["grafana","documentation","sdk","@grafana/data"]
type = "docs"
disable_edit_link = true
+++

## FeatureToggles interface

Describes available feature toggles in Grafana. These can be configured via conf/custom.ini to enable features under development or not yet available in stable version.

Only enabled values will be returned in this interface

<b>Signature</b>

```typescript
export interface FeatureToggles 
```
<b>Import</b>

```typescript
import { FeatureToggles } from '@grafana/data';
```
<b>Properties</b>

|  Property | Type | Description |
|  --- | --- | --- |
|  ["live-config"](#_live-config_-property) | <code>boolean</code> |  |
|  ["live-pipeline"](#_live-pipeline_-property) | <code>boolean</code> |  |
|  ["live-service-web-worker"](#_live-service-web-worker_-property) | <code>boolean</code> |  |
|  ["service-accounts"](#_service-accounts_-property) | <code>boolean</code> |  |
|  [accesscontrol](#accesscontrol-property) | <code>boolean</code> |  |
|  [dashboardPreviews](#dashboardpreviews-property) | <code>boolean</code> |  |
|  [database\_metrics](#database_metrics-property) | <code>boolean</code> |  |
|  [disable\_http\_request\_histogram](#disable_http_request_histogram-property) | <code>boolean</code> |  |
|  [envelopeEncryption](#envelopeencryption-property) | <code>boolean</code> |  |
|  [featureHighlights](#featurehighlights-property) | <code>boolean</code> |  |
|  [fullRangeLogsVolume](#fullrangelogsvolume-property) | <code>boolean</code> |  |
|  [httpclientprovider\_azure\_auth](#httpclientprovider_azure_auth-property) | <code>boolean</code> |  |
|  [migrationLocking](#migrationlocking-property) | <code>boolean</code> |  |
|  [newNavigation](#newnavigation-property) | <code>boolean</code> |  |
|  [prometheus\_azure\_auth](#prometheus_azure_auth-property) | <code>boolean</code> |  |
|  [queryOverLive](#queryoverlive-property) | <code>boolean</code> |  |
|  [showFeatureFlagsInUI](#showfeatureflagsinui-property) | <code>boolean</code> |  |
|  [swaggerUi](#swaggerui-property) | <code>boolean</code> |  |
|  [tempoBackendSearch](#tempobackendsearch-property) | <code>boolean</code> |  |
|  [tempoSearch](#temposearch-property) | <code>boolean</code> |  |
|  [tempoServiceGraph](#temposervicegraph-property) | <code>boolean</code> |  |
|  [trimDefaults](#trimdefaults-property) | <code>boolean</code> |  |
|  [validatedQueries](#validatedqueries-property) | <code>boolean</code> |  |

### "live-config" property

<b>Signature</b>

```typescript
['live-config']?: boolean;
```

### "live-pipeline" property

<b>Signature</b>

```typescript
['live-pipeline']?: boolean;
```

### "live-service-web-worker" property

<b>Signature</b>

```typescript
['live-service-web-worker']?: boolean;
```

### "service-accounts" property

<b>Signature</b>

```typescript
['service-accounts']?: boolean;
```

### accesscontrol property

<b>Signature</b>

```typescript
accesscontrol?: boolean;
```

### dashboardPreviews property

<b>Signature</b>

```typescript
dashboardPreviews?: boolean;
```

### database\_metrics property

<b>Signature</b>

```typescript
database_metrics?: boolean;
```

### disable\_http\_request\_histogram property

<b>Signature</b>

```typescript
disable_http_request_histogram?: boolean;
```

### envelopeEncryption property

<b>Signature</b>

```typescript
envelopeEncryption?: boolean;
```

### featureHighlights property

<b>Signature</b>

```typescript
featureHighlights?: boolean;
```

### fullRangeLogsVolume property

<b>Signature</b>

```typescript
fullRangeLogsVolume?: boolean;
```

### httpclientprovider\_azure\_auth property

<b>Signature</b>

```typescript
httpclientprovider_azure_auth?: boolean;
```

### migrationLocking property

<b>Signature</b>

```typescript
migrationLocking?: boolean;
```

### newNavigation property

<b>Signature</b>

```typescript
newNavigation?: boolean;
```

### prometheus\_azure\_auth property

<b>Signature</b>

```typescript
prometheus_azure_auth?: boolean;
```

### queryOverLive property

<b>Signature</b>

```typescript
queryOverLive?: boolean;
```

### showFeatureFlagsInUI property

<b>Signature</b>

```typescript
showFeatureFlagsInUI?: boolean;
```

### swaggerUi property

<b>Signature</b>

```typescript
swaggerUi?: boolean;
```

### tempoBackendSearch property

<b>Signature</b>

```typescript
tempoBackendSearch?: boolean;
```

### tempoSearch property

<b>Signature</b>

```typescript
tempoSearch?: boolean;
```

### tempoServiceGraph property

<b>Signature</b>

```typescript
tempoServiceGraph?: boolean;
```

### trimDefaults property

<b>Signature</b>

```typescript
trimDefaults?: boolean;
```

### validatedQueries property

<b>Signature</b>

```typescript
validatedQueries?: boolean;
```
